<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55637A"
    tools:context=".agregarRifas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="681dp"
        android:text="@string/tv1_titulo_activity"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAgregarRifaDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="368dp"
        android:background="#112C00"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/btnAgregarRifaDB"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/h1_titulo"
        android:ems="10"
        android:hint="@string/h1_titulo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E4E4E4"
        android:textColorHint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="42dp"
        android:autofillHints="@string/h2_descripcion"
        android:ems="10"
        android:hint="@string/h2_descripcion"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E4E4E4"
        android:textColorHint="#D3D3D3"
        app:layout_constraintBottom_toTopOf="@+id/btnAgregarRifaDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

</androidx.constraintlayout.widget.ConstraintLayout>